# defi-copilot

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
contracts/fusion_polkadot_escrow/: lib.rs
contracts/intent_escrow/: Cargo.toml  lib.rs
contracts/lib/cross-chain-swap/lib/solidity-utils/: hardhat.config.js  hardhat.config.ts  package-lock.json  package.json
contracts/lib/cross-chain-swap/lib/solidity-utils/docgen/: index.js  templates.js
contracts/lib/cross-chain-swap/lib/solidity-utils/hardhat-setup/: index.js  networks.js
contracts/lib/cross-chain-swap/lib/solidity-utils/src/: bySig.js  expect.js  index.js  permit.js  prelude.js  profileEVM.js  utils.js
contracts/lib/cross-chain-swap/lib/solidity-utils/test/: Permitable.test.js  asserts.test.js  permit.test.js  profileEVM.test.js  utils.test.js  utils.test.ts
contracts/polkadot_resolver/: Cargo.toml
contracts/relayer_coordinator/: Cargo.toml  lib.rs
polkadot_contracts/fusion_polkadot_escrow/: Cargo.toml  lib.rs
polkadot_contracts/polkadot_resolver/: lib.rs
src/: index.ts
src/abi/: fusion_polkadot_escrow.json  polkadot_resolver.json
src/abi/ERC20.sol/: ERC20.json
src/abi/EscrowSrc.sol/: EscrowSrc.json
src/abi/Resolver.sol/: Resolver.json
src/abi/TestEscrowFactory.sol/: TestEscrowFactory.json
src/middleware/: ErrorHandler.ts
src/services/: FusionCrossChainBridge.ts  FusionPolkadotRelayer.ts  NewFusionPolkadotRelayer.ts  cross-chain-relayer.ts  demo.ts  integration.ts
src/validators/: SwapValidation.ts
tests/: checkBalance.ts  fundToken.ts  verify.ts
(+21 files in other folders)
