[package]
name = "intent_escrow"
version = "0.1.0"
authors = ["ogbodoebuka"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"], optional = true }

# This section is CRUCIAL. It must exist and be correct.
[lib]
name = "intent_escrow"
path = "src/lib.rs" # Explicitly point to your library file
crate-type = [
    "cdylib", # For the Wasm contract
    "rlib",   # For unit tests
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true